Add full signup profile, verification flows, and admin security alerts

--- a/admin/analytics.html
+++ b/admin/analytics.html
@@ -109,6 +109,17 @@
           </div>
           <div class="alert warning" id="analyticsLowCompletion"></div>
           <div class="alert info" id="analyticsPendingReview"></div>
+          <div class="alert danger" id="analyticsSecuritySignals"></div>
+        </div>
+
+        <div class="builder-card">
+          <div class="card-header">
+            <div>
+              <h2>تنبيهات أمنية مسبقة</h2>
+              <p class="helper-text">مؤشرات من بيانات المستخدمين تتطلب تدخلًا استباقيًا.</p>
+            </div>
+          </div>
+          <ul class="security-signals" id="securitySignalsList"></ul>
         </div>
       </div>
     </section>
