--- a/login.html
+++ b/login.html
@@ -21,107 +21,27 @@
   <div id="header-placeholder"></div>
 
   <main class="login-page container">
-    <h2>تسجيل الدخول</h2>
+    <h2 data-i18n-en="Log in">تسجيل الدخول</h2>
 
     <!-- تسجيل الدخول بالبريد -->
     <form id="loginForm">
-      <input id="emailInput" type="email" placeholder="البريد الإلكتروني" required>
-      <input id="passwordInput" type="password" placeholder="كلمة المرور" required>
-      <button type="submit">تسجيل الدخول</button>
+      <input id="emailInput" type="email" placeholder="البريد الإلكتروني" required data-i18n-placeholder-en="Email">
+      <input id="passwordInput" type="password" placeholder="كلمة المرور" required data-i18n-placeholder-en="Password">
+      <button type="submit" data-i18n-en="Log in">تسجيل الدخول</button>
       <div id="errorMsg" class="error-msg"></div>
     </form>
 
-    <p>أو</p>
+    <p data-i18n-en="or">أو</p>
 
     <!-- تسجيل الدخول بـ Google -->
-    <button id="googleLoginBtn" class="google-btn">
+    <button id="googleLoginBtn" class="google-btn" data-i18n-en="Log in with Google">
       تسجيل الدخول باستخدام Google
     </button>
   </main>
 
   <div id="footer-placeholder"></div>
 
-  <!-- Firebase Auth -->
-  <script type="module">
-    import { auth, googleProvider } from './js/firebase-config.js';
-    import { signInWithPopup, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-
-    const loginForm = document.getElementById("loginForm");
-    const errorMsg = document.getElementById("errorMsg");
-
-    // --- تسجيل الدخول بالإيميل ---
-    if (loginForm) {
-      loginForm.addEventListener("submit", async (e) => {
-        e.preventDefault();
-        const email = document.getElementById("emailInput").value;
-        const password = document.getElementById("passwordInput").value;
-
-        try {
-          const userCredential = await signInWithEmailAndPassword(auth, email, password);
-          const user = userCredential.user;
-
-          // حفظ بيانات المستخدم في localStorage
-          localStorage.setItem("coursehub_user", JSON.stringify({
-            name: user.displayName || user.email.split("@")[0],
-            email: user.email,
-            picture: user.photoURL,
-            uid: user.uid,
-            role: "user"
-          }));
-
-          // إعادة التوجيه للصفحة الرئيسية
-          window.location.href = "index.html";
-
-        } catch (error) {
-          console.error("Login Error:", error);
-          if (errorMsg) errorMsg.textContent = "البريد الإلكتروني أو كلمة المرور غير صحيحة.";
-        }
-      });
-    }
-
-    // --- تسجيل الدخول بحساب Google ---
-    const googleBtn = document.getElementById("googleLoginBtn");
-    if (googleBtn) {
-      googleBtn.addEventListener("click", async () => {
-        try {
-          const result = await signInWithPopup(auth, googleProvider);
-          const user = result.user;
-
-          // حفظ بيانات المستخدم في localStorage
-          localStorage.setItem("coursehub_user", JSON.stringify({
-            name: user.displayName,
-            email: user.email,
-            picture: user.photoURL,
-            uid: user.uid,
-            role: "user"
-          }));
-
-          // إعادة التوجيه للصفحة الرئيسية
-          window.location.href = "index.html";
-
-        } catch (error) {
-          console.error("Google Login Error:", error);
-          if (errorMsg) errorMsg.textContent = "فشل تسجيل الدخول بحساب Google.";
-        }
-      });
-    }
-
-    // --- مراقبة حالة تسجيل الدخول ---
-    onAuthStateChanged(auth, (user) => {
-      if (user) {
-        const storedUser = JSON.parse(localStorage.getItem("coursehub_user"));
-        if (!storedUser) {
-          localStorage.setItem("coursehub_user", JSON.stringify({
-            name: user.displayName,
-            email: user.email,
-            picture: user.photoURL,
-            uid: user.uid,
-            role: "user"
-          }));
-        }
-      }
-    });
-  </script>
+  <script type="module" src="js/auth.js"></script>
 
 </body>
 </html>
