Add instructor onboarding, review workflow and dashboard

--- a/admin/partials-admin/sidebar.html
+++ b/admin/partials-admin/sidebar.html
@@ -24,6 +24,12 @@
       </a>
     </li>
     <li>
+      <a href="instructor-applications.html">
+        <span class="menu-icon">🎓</span>
+        <span class="menu-text">طلبات الأساتذة</span>
+      </a>
+    </li>
+    <li>
       <a href="courses-admin.html">
         <span class="menu-icon">📚</span>
         <span class="menu-text">الدورات</span>
