Add admin user delete action with confirmation and Firebase rules guide

--- a/admin/users.html
+++ b/admin/users.html
@@ -75,6 +75,7 @@
               <th>البريد الإلكتروني</th>
               <th>الدور</th>
               <th>الحالة</th>
+              <th>إجراءات</th>
             </tr>
           </thead>
           <tbody id="users-list">
