Add archive/republish workflow for courses and archived status filters

--- a/admin/courses-admin.html
+++ b/admin/courses-admin.html
@@ -28,7 +28,7 @@
         <div class="page-header">
           <div>
             <h1>إدارة الدورات</h1>
-            <p class="helper-text">تتبّع الحالات (مسودة، قيد المراجعة، منشورة) والتحكم بجودة المحتوى.</p>
+            <p class="helper-text">تتبّع الحالات (مسودة، قيد المراجعة، منشورة، مؤرشفة) مع إمكانية الأرشفة وإعادة النشر والتعديل قبل النشر.</p>
           </div>
           <div class="page-actions">
             <button type="button" id="add-course-btn" class="btn">
@@ -45,6 +45,7 @@
               <option value="draft">مسودة</option>
               <option value="review">قيد المراجعة</option>
               <option value="published">منشورة</option>
+              <option value="archived">مؤرشفة</option>
             </select>
             <select id="course-category-filter">
               <option value="all">كل التصنيفات</option>
