--- a/admin/edit-course.html
+++ b/admin/edit-course.html
@@ -28,7 +28,7 @@
         <div class="page-header">
           <div>
             <h1>تعديل بيانات الدورة</h1>
-            <p class="helper-text">يمكنك تحديث بيانات الدورة سواء كانت مسودة أو منشورة.</p>
+            <p class="helper-text">يمكنك تحديث بيانات الدورة سواء كانت مسودة أو مؤرشفة أو منشورة ثم حفظها قبل إعادة النشر.</p>
           </div>
           <div class="page-actions">
             <a href="/admin/courses-admin.html" class="btn outline">عودة للدورات</a>
@@ -71,6 +71,7 @@
                 <option value="draft">مسودة</option>
                 <option value="review">قيد المراجعة</option>
                 <option value="published">منشورة</option>
+                <option value="archived">مؤرشفة</option>
               </select>
             </div>
           </div>
