Add instructor quiz builder and callable submission/review flow

--- a/admin/courses-admin.html
+++ b/admin/courses-admin.html
@@ -80,6 +80,32 @@
             <!-- يتم تعبئتها من JS -->
           </tbody>
         </table>
+
+
+        <section class="builder-card" style="margin-top:18px;">
+          <div class="page-header" style="margin-bottom:10px;">
+            <div>
+              <h2 style="margin:0;">طلبات دورات الأساتذة</h2>
+              <p class="helper-text">مراجعة واعتماد/رفض الدورات المرسلة من لوحة الأستاذ.</p>
+            </div>
+          </div>
+
+          <table class="courses-table">
+            <thead>
+              <tr>
+                <th>العنوان</th>
+                <th>الأستاذ</th>
+                <th>المحتوى</th>
+                <th>الحالة</th>
+                <th>ملاحظة</th>
+                <th>الإجراءات</th>
+              </tr>
+            </thead>
+            <tbody id="instructor-submissions-list">
+              <tr><td colspan="6">جارٍ تحميل طلبات الأساتذة...</td></tr>
+            </tbody>
+          </table>
+        </section>
       </div>
     </section>
   </div>
