Add instructor workspace lists and admin-instructor chat panel

--- a/admin/partials-admin/sidebar.html
+++ b/admin/partials-admin/sidebar.html
@@ -48,6 +48,12 @@
       </a>
     </li>
     <li>
+      <a href="instructor-chat.html">
+        <span class="menu-icon">💬</span>
+        <span class="menu-text">دردشة الأساتذة</span>
+      </a>
+    </li>
+    <li>
       <a href="settings-admin.html">
         <span class="menu-icon">⚙️</span>
         <span class="menu-text">الإعدادات</span>
